GS-12803: Search Redesign Walton: List View Layout(new style for state drop down and bug fix of overlapping search box text)

--- a/src/webapp/res/css/05_forms/forms.css
+++ b/src/webapp/res/css/05_forms/forms.css
@@ -108,13 +108,6 @@ legend, #IE8#HACK {margin-top:0;margin-bottom:0;}*/
 .slFormsV1-0 .ral select { margin: 5px; }
 .ie7 .slFormsV1-0 .ral select { margin-top: 0px; }
 
-.slFormsV1-0 .showState {
-    /*position: absolute;*/
-    /*left: 15px;*/
-    color: #06B;
-    font-size:12px;
-}
-
 .slFormsV1-0 select.stateSelect {
     opacity: 0;
     filter: alpha(opacity = 0);
@@ -124,8 +117,8 @@ legend, #IE8#HACK {margin-top:0;margin-bottom:0;}*/
     color: #0066bb;
     padding: 0;
     width: 87px;
-    left: 5px;
-    top: 2px;
+    left: 8px;
+    top: 8px;
 }
 .slFormsV1-0 select.stateSelect option {
     width:60px;
