--- a/src/webapp/res/css/09_spacing/spacing.css
+++ b/src/webapp/res/css/09_spacing/spacing.css
@@ -286,6 +286,10 @@ General comments:
     margin-top: 5px;
 }
 
+.mrgtop_7 {
+    margin-top: 7px;
+}
+
 .mrgtop_15 {
     margin-top: 15px;
 }
